--- a/.github/workflows/sample-workflow.yml
+++ b/.github/workflows/sample-workflow.yml
@@ -1,10 +1,22 @@
-name: Sample Workflow
+name: Issue Template Workflow
+
 on:
-  issue_template:
-    types: [Sample template] 
+  issues:
+    types: [opened]
+    # Filter by issue template name
+    - name: Sample template
+
 jobs:
-  sample_job:
+  process_issue:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Hello World
-        run: echo "Hello, world!"
+      - name: Check out repository
+        uses: actions/checkout@v2
+
+      - name: Print issue information
+        run: |
+          echo "Issue number: ${{ github.event.issue.number }}"
+          echo "Issue title: ${{ github.event.issue.title }}"
+          echo "Issue description: ${{ github.event.issue.body }}"
+          echo "Assignee: ${{ github.event.issue.assignee.login }}"
