--- a/.github/workflows/education-workflow.yml
+++ b/.github/workflows/education-workflow.yml
@@ -1,11 +1,11 @@
-name: Sample Template Workflow
+name: education Workflow
 
 on:
   issues:
     types: [opened]
     # Filter by issue template name
     issue_template:
-      name: Sample template
+      name: education template
 
 jobs:
   process_issue:
