--- a/.github/ISSUE_TEMPLATE/education template.yml
+++ b/.github/ISSUE_TEMPLATE/education template.yml
@@ -1,4 +1,4 @@
-name: Education template
+name: education template
 description: This is education template to be followed for remaining activity.
 title: "Education template for Project: <Your Project Name>"
 labels: ["bug"]
