--- a/.github/ISSUE_TEMPLATE/sample template.yml
+++ b/.github/ISSUE_TEMPLATE/sample template.yml
@@ -1,4 +1,4 @@
-name: Sample template
+name: sample template
 description: This is sample template to be followed for remaining activity.
 title: "Sample template for Project: <Your Project Name>"
 labels: ["bug"]
