--- a/.github/workflows/sample-workflow.yml
+++ b/.github/workflows/sample-workflow.yml
@@ -1,11 +1,10 @@
-name: Sample Template Workflow
+name: education Workflow
 
 on:
   issues:
     types: [opened]
-    # Filter by issue template name
     issue_template:
-      name: Sample template
+      name: sample template
 
 jobs:
   process_issue:
