--- a/.github/workflows/sample-workflow.yml
+++ b/.github/workflows/sample-workflow.yml
@@ -1,10 +1,15 @@
-name: education Workflow
+name: Sample Workflow
 
 on:
   issues:
     types: [opened]
-    issue_template:
-      name: sample template
+  # Only run for issues with the "education template" template
+  workflow_dispatch:
+    inputs:
+      template:
+        description: 'Issue template'
+        required: true
+        default: 'sample template'
 
 jobs:
   process_issue:
@@ -18,5 +23,4 @@ jobs:
         run: |
           echo "Issue number: ${{ github.event.issue.number }}"
           echo "Issue title: ${{ github.event.issue.title }}"
-          echo "Issue description: ${{ github.event.issue.body }}"
-          echo "Assignee: ${{ github.event.issue.assignee.login }}"
+         
