--- a/.github/ISSUE_TEMPLATE/education template.yml
+++ b/.github/ISSUE_TEMPLATE/education template.yml
@@ -1,5 +1,5 @@
 name: education template
-description: Issue template
+description: education template
 title: "Education template for Project: <Your Project Name>"
 labels: ["bug"]
 assignees:
