--- a/.github/workflows/sample-workflow.yml
+++ b/.github/workflows/sample-workflow.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
     inputs:
       template:
-        description: 'Issue template'
+        description: 'sample template'
         required: true
         default: 'sample template'
 
