--- a/.github/ISSUE_TEMPLATE/severity.yml
+++ b/.github/ISSUE_TEMPLATE/severity.yml
@@ -1,6 +1,5 @@
-name: severity template
-description: severity template
-title: "My Issue Template"
+name: issue_template.yml
+title: My Issue Template
 about: A template for creating issues
 labels:
   - bug
