--- a/.github/workflows/severity-workflow.yml
+++ b/.github/workflows/severity-workflow.yml
@@ -1,10 +1,9 @@
 name: Severity Workflow
-
 on:
   issues:
     types: [opened]
-    # Only run for issues with the "severity: high" label
-    labels: [severity: high]
+    # Only run for issues with the "sample" label
+    labels: [documentation]
 
 jobs:
   process_issue:
