--- a/.github/workflows/severity-workflow.yml
+++ b/.github/workflows/severity-workflow.yml
@@ -1,7 +1,7 @@
 name: Severity Workflow
 on:
   issues:
-    # Only run for issues with the "sample" label
+    types: [opened]
     labels: [documentation]
 
 jobs:
